--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Cynthia Zhang</h1>
-<p>Hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<meta charset="utf-8">
+    <title>Cynthia Zhang</title>
+    <meta name="viewport" content="width=device-width" />
+    <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic:400,700|Noto+Sans:400,700" rel="stylesheet">
+		<body>
+			
+			<p>Hosted with GitHub Pages.</p>
+		</body>
 </html>
